# resume-ai

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
backend/: .env.example  Dockerfile  Dockerfile.prod  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: auth.py  extract.py  profiles.py  resume.py
backend/app/core/: config.py
backend/app/models/: resume.py
backend/app/services/: ats.py  db.py  extractor.py  generator.py
backend/app/utils/: html.py
backend/data/: resumeai.db
backend/scripts/: db_reset.py
backend/tests/: conftest.py  test_api.py  test_utils.py
frontend/: Dockerfile.prod  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/auth/: AuthPanel.tsx
frontend/src/components/editor/: EditorPanel.css  EditorPanel.tsx  JobTargetsPanel.test.tsx  JobTargetsPanel.tsx  ProfilesPanel.test.tsx  ProfilesPanel.tsx  UploadPanel.tsx
frontend/src/components/resume/: ATSPanel.tsx  InsightsPanel.test.tsx  InsightsPanel.tsx  ResumePreview.tsx
frontend/src/components/templates/: TemplatesPanel.tsx
frontend/src/components/ui/: ErrorBoundary.tsx  index.tsx
frontend/src/hooks/: useGenerate.ts
frontend/src/lib/: api.ts
frontend/src/stores/: authStore.ts  resumeStore.ts
frontend/src/types/: resume.ts
